added check userID and fixed getUserPlants
