# api/swagger/swagger.yaml
@@ -483,8 +483,6 @@ paths:
       operationId: "getUserPlants"
       description: "Find all of the user’s plants"
       summary: "Find all of the user’s plants"
-      consumes:
-        - "application/json"
       produces:
         - "application/json"
       parameters:
@@ -594,7 +592,6 @@ paths:
               type: string
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /api/v1/user/plants/{userplant_id}:
     delete:
       tags:
         - "userplant"
@@ -602,12 +599,18 @@ paths:
       description: "Delete user's plant"
       operationId: "deleteUserPlant"
       parameters:
-        - in: path
+        - in: query
           name: userplant_id
           type: integer
           format: "int64"
           required: true
           description: ID of user's plant.
+        - in: query
+          name: user_id
+          type: integer
+          format: "int64"
+          required: true
+          description: Owner of this plant, user id
       produces:
         - "application/json"
       responses:
@@ -626,7 +629,8 @@ paths:
               description: The request id this is a response to
               type: string
           schema:
-            $ref: "#/definitions/ErrorResponse"          
+            $ref: "#/definitions/ErrorResponse"         
+     
   /api/v1/version:
     get:
       tags:
