# internal/api/handlers/userplants/userplant_delete.go
@@ -25,24 +25,24 @@ func (impl *deleteUserPlantImpl) Handle(params userplant.DeleteUserPlantParams) 
 	cookie, err := params.HTTPRequest.Cookie(apimiddleware.JWTCookieName)
 	if err != nil {
 		log.Errorf("get cookie %s error, %s", apimiddleware.JWTCookieName, err)
-		return userplant.NewCreateUserPlantDefault(http.StatusUnauthorized).
+		return userplant.NewDeleteUserPlantDefault(http.StatusUnauthorized).
 			WithPayload(&models.ErrorResponse{Message: "not token cookie"}).
 			WithXRequestID(apimiddleware.GetRequestID(params.HTTPRequest))
 	}
 	if cookie == nil {
-		return userplant.NewCreateUserPlantDefault(http.StatusUnauthorized).
+		return userplant.NewDeleteUserPlantDefault(http.StatusUnauthorized).
 			WithPayload(&models.ErrorResponse{Message: "empty token cookie"}).
 			WithXRequestID(apimiddleware.GetRequestID(params.HTTPRequest))
 	}
 	ok, err := impl.tm.Check(params.HTTPRequest.Context(), cookie.Value)
 	if err != nil {
 		log.Errorf("check token %s error, %s", cookie.Value, err)
-		return userplant.NewCreateUserPlantDefault(http.StatusUnauthorized).
+		return userplant.NewDeleteUserPlantDefault(http.StatusUnauthorized).
 			WithPayload(&models.ErrorResponse{Message: "check token error"}).
 			WithXRequestID(apimiddleware.GetRequestID(params.HTTPRequest))
 	}
 	if !ok {
-		return userplant.NewCreateUserPlantDefault(http.StatusUnauthorized).
+		return userplant.NewDeleteUserPlantDefault(http.StatusUnauthorized).
 			WithPayload(&models.ErrorResponse{Message: "token expired"}).
 			WithXRequestID(apimiddleware.GetRequestID(params.HTTPRequest))
 	}
@@ -50,9 +50,24 @@ func (impl *deleteUserPlantImpl) Handle(params userplant.DeleteUserPlantParams) 
 	uid, _, _, err := impl.tm.FindUserData(cookie.Value)
 	if err != nil {
 		log.Errorf("get user attributes from token %s error, %s", cookie.Value, err)
-		return userplant.NewCreateUserPlantDefault(http.StatusForbidden).
+		return userplant.NewDeleteUserPlantDefault(http.StatusForbidden).
 			WithPayload(&models.ErrorResponse{Message: "check permission error"}).
 			WithXRequestID(apimiddleware.GetRequestID(params.HTTPRequest))
 	}
-
+	// Check of plant user ID and user ID in coockie
+	if uid != params.UserID {
+		log.Errorf("Handle DeleteUserPlant: check permission error")
+		return userplant.NewDeleteUserPlantDefault(http.StatusForbidden).
+			WithPayload(&models.ErrorResponse{Message: "check permission error"}).
+			WithXRequestID(apimiddleware.GetRequestID(params.HTTPRequest))
+	}
+	err = impl.storage.DeleteUserPlant(params.HTTPRequest.Context(), params.UserplantID)
+	if err != nil {
+		log.Errorf("Handle DeleteUserPlant error: %s", err)
+		return userplant.NewDeleteUserPlantDefault(http.StatusInternalServerError).
+			WithPayload(&models.ErrorResponse{Message: "db error"}).
+			WithXRequestID(apimiddleware.GetRequestID(params.HTTPRequest))
+	}
+	return userplant.NewDeleteUserPlantOK().WithPayload(&models.Response{Message: "User's plant deleted"}).
+		WithXRequestID(apimiddleware.GetRequestID(params.HTTPRequest))
 }
