# internal/api/handlers/userplants/userplant_update.go
@@ -4,7 +4,6 @@ import (
 	"net/http"
 
 	"github.com/go-openapi/runtime/middleware"
-	"github.com/kaatinga/plantbook/internal/api/handlers"
 	apimiddleware "github.com/kaatinga/plantbook/internal/api/middleware"
 	"github.com/kaatinga/plantbook/internal/api/models"
 	"github.com/kaatinga/plantbook/internal/api/restapi/operations/userplant"
@@ -12,63 +11,65 @@ import (
 	"github.com/kaatinga/plantbook/pkg/token"
 )
 
-type createUserPlantImpl struct {
+type updateUserPlantImpl struct {
 	storage RepoInterface
 	tm      token.Manager
 }
 
-func NewCreateUserPlantHandler(storage RepoInterface, tm token.Manager) userplant.CreateUserPlantHandler {
-	return &createUserPlantImpl{storage: storage, tm: tm}
+func NewUpdateUserPlantHandler(storage RepoInterface, tm token.Manager) userplant.UpdateUserPlantHandler {
+	return &updateUserPlantImpl{storage: storage, tm: tm}
 }
 
-func (impl *createUserPlantImpl) Handle(params userplant.CreateUserPlantParams) middleware.Responder {
+func (impl *updateUserPlantImpl) Handle(params userplant.UpdateUserPlantParams) middleware.Responder {
 	log := logging.FromContext(params.HTTPRequest.Context())
 	cookie, err := params.HTTPRequest.Cookie(apimiddleware.JWTCookieName)
 	if err != nil {
 		log.Errorf("get cookie %s error, %s", apimiddleware.JWTCookieName, err)
-		return userplant.NewCreateUserPlantDefault(http.StatusUnauthorized).
+		return userplant.NewUpdateUserPlantDefault(http.StatusUnauthorized).
 			WithPayload(&models.ErrorResponse{Message: "not token cookie"}).
 			WithXRequestID(apimiddleware.GetRequestID(params.HTTPRequest))
 	}
 	if cookie == nil {
-		return userplant.NewCreateUserPlantDefault(http.StatusUnauthorized).
+		return userplant.NewUpdateUserPlantDefault(http.StatusUnauthorized).
 			WithPayload(&models.ErrorResponse{Message: "empty token cookie"}).
 			WithXRequestID(apimiddleware.GetRequestID(params.HTTPRequest))
 	}
 	ok, err := impl.tm.Check(params.HTTPRequest.Context(), cookie.Value)
 	if err != nil {
 		log.Errorf("check token %s error, %s", cookie.Value, err)
-		return userplant.NewCreateUserPlantDefault(http.StatusUnauthorized).
+		return userplant.NewUpdateUserPlantDefault(http.StatusUnauthorized).
 			WithPayload(&models.ErrorResponse{Message: "check token error"}).
 			WithXRequestID(apimiddleware.GetRequestID(params.HTTPRequest))
 	}
 	if !ok {
-		return userplant.NewCreateUserPlantDefault(http.StatusUnauthorized).
+		return userplant.NewUpdateUserPlantDefault(http.StatusUnauthorized).
 			WithPayload(&models.ErrorResponse{Message: "token expired"}).
 			WithXRequestID(apimiddleware.GetRequestID(params.HTTPRequest))
 	}
 
-	uid, _, roleID, err := impl.tm.FindUserData(cookie.Value)
+	uid, _, _, err := impl.tm.FindUserData(cookie.Value)
 	if err != nil {
 		log.Errorf("get user attributes from token %s error, %s", cookie.Value, err)
-		return userplant.NewCreateUserPlantDefault(http.StatusForbidden).
+		return userplant.NewUpdateUserPlantDefault(http.StatusForbidden).
+			WithPayload(&models.ErrorResponse{Message: "check permission error"}).
+			WithXRequestID(apimiddleware.GetRequestID(params.HTTPRequest))
+	}
+	// Check of plant user ID and user ID in coockie
+	if uid != params.Userplant.UserID {
+		log.Errorf("Handle UpdateUserPlant: check permission error")
+		return userplant.NewUpdateUserPlantDefault(http.StatusForbidden).
 			WithPayload(&models.ErrorResponse{Message: "check permission error"}).
 			WithXRequestID(apimiddleware.GetRequestID(params.HTTPRequest))
 	}
 
-	// fill owner_id for plant if userRole = gardener
-	// if userRole = admin, miss because admin must to set OwnerID
-	if roleID == handlers.UserRoleGardener || params.Userplant.UserID == 0 {
-		params.Userplant.UserID = uid
-	}
-	newUserPlant, err := impl.storage.StorePlant(params.HTTPRequest.Context(), params.Userplant)
+	updatedUserPlant, err := impl.storage.UpdateUserPlant(params.HTTPRequest.Context(), params.Userplant)
 	if err != nil {
-		log.Errorf("Handle StoragePlant error, %s", err)
-		return userplant.NewCreateUserPlantDefault(http.StatusInternalServerError).
+		log.Errorf("Handle UpdateUserPlant error: %s", err)
+		return userplant.NewUpdateUserPlantDefault(http.StatusInternalServerError).
 			WithPayload(&models.ErrorResponse{Message: "db error"}).
 			WithXRequestID(apimiddleware.GetRequestID(params.HTTPRequest))
 	}
 
-	return userplant.NewCreateUserPlantOK().WithPayload(newUserPlant).
+	return userplant.NewUpdateUserPlantOK().WithPayload(updatedUserPlant).
 		WithXRequestID(apimiddleware.GetRequestID(params.HTTPRequest))
 }
